--- a/TTWebApp/TTClientApp/templates/auth/register.html
+++ b/TTWebApp/TTClientApp/templates/auth/register.html
@@ -4,7 +4,7 @@
 {% block page_content %}
 <form method="POST">
     {% csrf_token %}
-    {{form}}
+    {{form.as_p}}
     <input type="submit" value="Register">
 </form>
 {% endblock %}
