--- a/TTWebApp/TTClientApp/templates/base.html
+++ b/TTWebApp/TTClientApp/templates/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="{% url 'index' %}">BMI Calculator</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Tech Trade Store</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-lg-auto">
                     <li class="nav-item">
-                        <a href="{% url 'index' %}" class="nav-link smoothScroll">Home</a>
+                        <a href="{% url 'home' %}" class="nav-link smoothScroll">Home</a>
                     </li>
                     {% if request.user.is_authenticated %}
                         {{ request.user.get_username }}!
