--- a/TTWebApp/TTClientApp/templates/index.html
+++ b/TTWebApp/TTClientApp/templates/index.html
@@ -2,8 +2,6 @@
 {% load static %}
 {% block page_title %}Home{% endblock %}
 {% block page_content %}
-<h1>Hi!
-    
-HTML will be here soon</h1>
+<h1>Hi! HTML will be here soon</h1>
 
 {% endblock %}
