--- a/TTWebApp/TTClientApp/templates/auth/login.html
+++ b/TTWebApp/TTClientApp/templates/auth/login.html
@@ -7,4 +7,5 @@
     {{form}}
     <input type="submit" value="Log In">
 </form>
+<a href="{% url 'password_reset' %}">Forgot Password?</a>
 {% endblock %}
