--- a/TTWebApp/TTClientApp/templates/products/detailView.html
+++ b/TTWebApp/TTClientApp/templates/products/detailView.html
@@ -6,11 +6,14 @@
         td{
             border: 0;
         }
+        img{
+            width: 50%;
+        }
     </style>
     <div class="container" style="display: flex; align-items: center; justify-content: center; width: 100%;">
         <div class="left" style=" width:20%;">
             <!-- TODO image url -->
-            <img src="{{ prod.picture.url }}" alt="pic">
+            <img src="https://media.istockphoto.com/vectors/shopping-cart-icon-isolated-on-white-background-vector-id1206806317?k=20&m=1206806317&s=612x612&w=0&h=waK8qOHV2Fgz2ntEWHWBQtXpNDAQ_wdhd4tkTUz6tfE=" alt="pic">
         </div>
         <div class="right">
             <table>
@@ -42,6 +45,7 @@
         </div>
     </div>
     <form method="post">{% csrf_token %}
+        <input type="submit" name="addtowishlist" value="Add To Wishlist">
         <input type="submit" name="addtocart" value="Add To Cart">
     </form>
 {% endblock %}
