--- a/TTWebApp/TTClientApp/templates/wishlist/wishlist.html
+++ b/TTWebApp/TTClientApp/templates/wishlist/wishlist.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block page_title %}cart{% endblock %}
+{% block page_title %}wishlist{% endblock %}
 {% block page_content %}
     {% for item in items %}
-        {{item}}
+        {{item.productid}}
+        {{item.adddate}}
     {% endfor%}
 {% endblock %}
