--- a/TTWebApp/TTClientApp/templates/buy/buy.html
+++ b/TTWebApp/TTClientApp/templates/buy/buy.html
@@ -1,4 +1,16 @@
+{% for message in messages %}
+        <p class="messages">{{message}}</p>
+    {% endfor%}
 <form method="post">{% csrf_token %}
-    {{ form.as_p }}
+    {% for item in form %}
+        {% if item is 'select' %}
+            <p>jbk</p>
+        {%else%}
+            {{item.label}} <br>
+            {{item}} <br>
+        {%endif%}
+        
+    {%endfor%}
+    <!-- {{ form.as_p }} -->
     <input type="submit" value="Save">
 </form>
