--- a/TTWebApp/TTClientApp/templates/index.html
+++ b/TTWebApp/TTClientApp/templates/index.html
@@ -9,13 +9,28 @@
 
      <option selected display = "true" placeholder="Categories"> </option> 
     {% for g_d in get %}
-    <option value="{{ g_d.categoryname }}">{{ g_d.categoryname }}  
-        </option>
+
+    <option value="{{ g_d.categoryid }}"> {{ g_d.categoryname }}   </option> 
     
     {% endfor %}
+
 </select>
+{% comment %}  
+<ul>
+    {% for category in get %}
+    <li>{{ category.categoryname }}</li>
+   
+        <ul>
+            {% for product in getp %} 
 
+            <li> {{ product.productname }}</li> 
 
+            {% endfor %}
+        </ul>
+        
+    
+    {% endfor %}
+</ul> {% endcomment %}
 
 
 
