--- a/TTWebApp/TTClientApp/templates/OrdersView.html
+++ b/TTWebApp/TTClientApp/templates/OrdersView.html
@@ -3,7 +3,7 @@
 {% block page_title %}Home{% endblock %}
 {% block page_content %}
 
-{% for r in object_list %}
+{% for r in results %}
     <td> {{ r.cutomerid }}</td>
     <td> {{ r.orderdate }}</td>
 {% endfor%}
