--- a/TTWebApp/TTClientApp/templates/base.html
+++ b/TTWebApp/TTClientApp/templates/base.html
@@ -65,10 +65,9 @@
                                 <li class="dropdown">
                                     <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">My Account</a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="my-account.html">My Account</a></li>
-                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                        <li><a href="shop-detail.html">Shop Detail</a></li>
+                                        <li><a href="{% url 'cart' %}">Cart</a></li>
+                                        <li><a href="{% url 'account' %}">My Account</a></li>
+                                        <li><a href="{% url 'wishlist' %}">Wishlist</a></li>
                                     </ul>
                                 </li>
                                 <li>
