--- a/TTWebApp/TTClientApp/templates/account/orders.html
+++ b/TTWebApp/TTClientApp/templates/account/orders.html
@@ -9,7 +9,7 @@
             <div class="col-lg-12">
                 <h2>My Orders</h2>
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Shop</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'account' %}">My Account</a></li>
                     <li class="breadcrumb-item active">My Orders</li>
                 </ul>
             </div>
